--- a/scss/main.css
+++ b/scss/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 
 Add styles or override variables from the theme here.
@@ -20255,8 +20256,27 @@ $google_font_family: 'Open+Sans:300,300i,400,400i,700,700i';
 #m- {
   display: none !important; }
 
+.td-sidebar {
+  font-size: 0.9em; }
+
+:root {
+  --bs-breadcrumb-divider: "▸";
+  --bs-breadcrumb-divider-flipped: "◂"; }
+
 #hero-page .card:hover {
   box-shadow: 0 1px 15px #d3d3d3;
   border: 1px solid lightcyan; }
+
+/* Examples for the CSS list indent; remove when in-page CSS rules are supported. */
+.example-list-indent-40,
+.example-list-indent-16 {
+  column-width: 15em;
+  column-rule: 1px solid var(--bs-border-color); }
+
+.example-list-indent-40 ul {
+  padding-inline-start: 40px; }
+
+.example-list-indent-16 ul {
+  padding-inline-start: 16px; }
 
 /*# sourceMappingURL=main.css.map */
